force-app/main/default/objects/Contact/fields/Anniversary__c.field-meta.xml
<CustomField>
    <fullName>Anniversary__c</fullName>
    <description>Contact&#39;s wedding anniversary</description>
    <inlineHelpText>Contact&#39;s wedding anniversary</inlineHelpText>
    <label>Anniversary</label>
    <type>Date</type>
</CustomField>