force-app/main/default/objects/Contact/fields/Annual_Asset_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Asset_Volume__c</fullName>
    <formula>Account.Annual_Asset_Volume__c</formula>
    <label>Annual Asset Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>