force-app/main/default/objects/Contact/fields/Asst_s_Email__c.field-meta.xml
<CustomField>
    <fullName>Asst_s_Email__c</fullName>
    <label>Asst&#39;s Email</label>
    <type>Email</type>
</CustomField>