force-app/main/default/objects/Contact/fields/Bio_Background__c.field-meta.xml
<CustomField>
    <fullName>Bio_Background__c</fullName>
    <description>Resume info.</description>
    <inlineHelpText>Resume info.</inlineHelpText>
    <label>Bio/Background</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>