force-app/main/default/objects/Contact/fields/Brands_Sold__c.field-meta.xml
<CustomField>
    <fullName>Brands_Sold__c</fullName>
    <label>Brands Sold</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABDICK</fullName>
            </value>
            <value>
                <fullName>Acer America</fullName>
            </value>
            <value>
                <fullName>Achiever</fullName>
            </value>
            <value>
                <fullName>ACOM</fullName>
            </value>
            <value>
                <fullName>Advanced Technologies</fullName>
            </value>
            <value>
                <fullName>Alps</fullName>
            </value>
            <value>
                <fullName>Ambir</fullName>
            </value>
            <value>
                <fullName>Analog</fullName>
            </value>
            <value>
                <fullName>Anzac</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>AT&amp;T</fullName>
            </value>
            <value>
                <fullName>Audiovox</fullName>
            </value>
            <value>
                <fullName>Avision</fullName>
            </value>
            <value>
                <fullName>BGL</fullName>
            </value>
            <value>
                <fullName>Bowe Bell and Howell</fullName>
            </value>
            <value>
                <fullName>Braley Communications</fullName>
            </value>
            <value>
                <fullName>Brother</fullName>
            </value>
            <value>
                <fullName>Calcomp</fullName>
            </value>
            <value>
                <fullName>Canon</fullName>
            </value>
            <value>
                <fullName>CITIFAX</fullName>
            </value>
            <value>
                <fullName>Citizen</fullName>
            </value>
            <value>
                <fullName>Compaq</fullName>
            </value>
            <value>
                <fullName>Copystar</fullName>
            </value>
            <value>
                <fullName>DAEWOO</fullName>
            </value>
            <value>
                <fullName>Danka</fullName>
            </value>
            <value>
                <fullName>Dataco DeRex</fullName>
            </value>
            <value>
                <fullName>Data General</fullName>
            </value>
            <value>
                <fullName>DAYTEK</fullName>
            </value>
            <value>
                <fullName>Decision Data</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>