force-app/main/default/objects/Contact/fields/CDL__c.field-meta.xml
<CustomField>
    <fullName>CDL__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Commercial Driver&#39;s License</description>
    <inlineHelpText>Commercial Driver&#39;s License</inlineHelpText>
    <label>CDL</label>
    <type>Checkbox</type>
</CustomField>