force-app/main/default/objects/Contact/fields/Is_Community_User__c.field-meta.xml
<CustomField>
    <fullName>Is_Community_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this flag is true then this contact should be eligible for creating customer community user</description>
    <inlineHelpText>If this flag is true then this contact should be eligible for creating customer community user</inlineHelpText>
    <label>Is Community User</label>
    <type>Checkbox</type>
</CustomField>