force-app/main/default/objects/Contact/fields/No_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>No_of_Locations__c</fullName>
    <formula>Account.No_of_Locations__c</formula>
    <label>No. of Locations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>