force-app/main/default/objects/Contact/fields/NumberOfEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumberOfEmployees__c</fullName>
    <formula>Account.NumberOfEmployees</formula>
    <label>No. of Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>