force-app/main/default/objects/Contact/fields/Prospective_Services__c.field-meta.xml
<CustomField>
    <fullName>Prospective_Services__c</fullName>
    <formula>IF(INCLUDES(Account.Prospective_Services__c , &quot;ReturnCenter Referral&quot;), &quot;ReturnCenter Referral; &quot;, NULL) +
IF(INCLUDES(Account.Prospective_Services__c , &quot;ReturnCenter Connected&quot;), &quot;ReturnCenter Connected; &quot;, NULL) +
IF(INCLUDES(Account.Prospective_Services__c , &quot;ReturnCenter Integrated&quot;), &quot;ReturnCenter Integrated; &quot;, NULL) +
IF(INCLUDES(Account.Prospective_Services__c , &quot;ScanPak&quot;), &quot;ScanPak&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospective Services</label>
    <type>Text</type>
</CustomField>