force-app/main/default/objects/Contact/fields/Re_do_Active__c.field-meta.xml
<CustomField>
    <fullName>Re_do_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the checkbox is checked, they are still in the running to be pursued.</description>
    <label>Re-do - Active</label>
    <type>Checkbox</type>
</CustomField>