force-app/main/default/objects/Contact/fields/Return_Shipments_per_Month__c.field-meta.xml
<CustomField>
    <fullName>Return_Shipments_per_Month__c</fullName>
    <formula>Account.Monthly_Volume__c</formula>
    <label>Return Shipments per Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>