force-app/main/default/objects/Contact/fields/Roles__c.field-meta.xml
<CustomField>
    <fullName>Roles__c</fullName>
    <defaultValue>&quot;Dispatcher Warehouse Contact, Driver, Billing Contact&quot;</defaultValue>
    <label>Roles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>