force-app/main/default/objects/Contact/fields/Sales_Funnel_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Funnel_Stage__c</fullName>
    <description>These are the stages of our sales funnel, starting with the basic all the way to a revenue-producing client.</description>
    <inlineHelpText>Assign the stage of relationship for this contact relative to the line of business this contact handles.</inlineHelpText>
    <label>Sales Funnel Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Positioned</fullName>
                <default>true</default>
                <label>Positioned</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Promised</fullName>
            </value>
            <value>
                <fullName>Producing</fullName>
            </value>
            <value>
                <fullName>Declined SRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>