force-app/main/default/objects/Contact/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <formula>IF(INCLUDES(Account.Specialization__c, &quot;Bins&quot;), &quot;Bins; &quot;, NULL) + 
IF(INCLUDES(Account.Specialization__c, &quot;ATMs&quot;), &quot;ATMs; &quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Specialization</label>
    <type>Text</type>
</CustomField>