force-app/main/default/objects/Contact/fields/Total_Return_Shipments_Month__c.field-meta.xml
<CustomField>
    <fullName>Total_Return_Shipments_Month__c</fullName>
    <description>Total returns per month among all asset classes.</description>
    <inlineHelpText>Total returns per month among all asset classes.</inlineHelpText>
    <label>Total Shipment Returns/Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>