force-app/main/default/objects/Contact/fields/Trade_Groups__c.field-meta.xml
<CustomField>
    <fullName>Trade_Groups__c</fullName>
    <description>These are trade organizations this company is a member of.</description>
    <label>Trade Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BTA</fullName>
            </value>
            <value>
                <fullName>CDA</fullName>
            </value>
            <value>
                <fullName>ELFA</fullName>
            </value>
            <value>
                <fullName>IBPI</fullName>
            </value>
            <value>
                <fullName>ITEX</fullName>
            </value>
            <value>
                <fullName>National Glass Association</fullName>
            </value>
            <value>
                <fullName>NEFA</fullName>
            </value>
            <value>
                <fullName>ProDealer</fullName>
            </value>
            <value>
                <fullName>RPA</fullName>
            </value>
            <value>
                <fullName>T&amp;EMA</fullName>
            </value>
            <value>
                <fullName>WCMA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>