force-app/main/default/objects/Contact/listViews/Large_BTA_Dealers.listView-meta.xml
<ListView>
    <fullName>Large_BTA_Dealers</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>NumberOfEmployees__c</columns>
    <columns>No_of_Locations__c</columns>
    <columns>Trade_Groups__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Trade_Groups__c</field>
        <operation>includes</operation>
        <value>BTA</value>
    </filters>
    <filters>
        <field>NumberOfEmployees__c</field>
        <operation>greaterThan</operation>
        <value>40</value>
    </filters>
    <label>Large BTA Dealers</label>
</ListView>