force-app/main/default/objects/Contact/listViews/Lessors.listView-meta.xml
<ListView>
    <fullName>Lessors</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>Lessors</label>
</ListView>